static/content.css
.yukari-rubi ruby {
  ruby-align: center;
  ruby-position: over;
}

.yukari-rubi rt {
  font-size: calc(var(--yukari-ruby-size, 50) * 0.01em);
  color: inherit;
  opacity: 0.8;
  user-select: none;
  /* Adaptive positioning based on font's actual rendered height */
  /* Compensates for different vertical metrics in JP vs KR fonts */
  margin-bottom: calc(-1 * var(--ruby-adjustment, 0px));
}

